# WoC

./: .gitignore  CMakeLists.txt  README.md
doc/: arch.md
simwars/: main.cpp
simwars/players-le/: loop_only.as  violate++.as  violate.as
simwars/players-sb/: infector.s
vis/: vcpu_pool.cpp  vcpu_pool.h
vm/: vcpu.c  vcpu.h
vpool/: vcpu_pool.cpp  vcpu_pool.h
wocas/: main.cpp
