PROJECT(woc)
cmake_minimum_required(VERSION 3.0)

AUX_SOURCE_DIRECTORY(vm VM_SOURCES)
AUX_SOURCE_DIRECTORY(vpool VPOOL_SOURCES)
AUX_SOURCE_DIRECTORY(simwars SIMWARS_SOURCES)
ADD_EXECUTABLE(woc-simwars ${VM_SOURCES} ${VPOOL_SOURCES} ${SIMWARS_SOURCES})
TARGET_LINK_LIBRARIES(woc-simwars SDL2)

set_target_properties(woc-simwars PROPERTIES
    CXX_STANDARD 11
    C_STANDARD 99
    POSITION_INDEPENDENT_CODE ON
)

AUX_SOURCE_DIRECTORY(wocas WOCAS_SOURCE)
ADD_EXECUTABLE(woc-as ${WOCAS_SOURCE})
set_target_properties(woc-as PROPERTIES
    CXX_STANDARD 11
    POSITION_INDEPENDENT_CODE ON
)
